syntax = "proto3";

package proto;
option go_package = "github.com/anoideaopen/hlf-control-plane/proto";

import "discovery/protocol.proto";
import "google/protobuf/timestamp.proto";

message DiscoveryPeer {
  message Certificate {
    string raw = 1;
    string ski = 2;
    repeated string domains = 3;
    google.protobuf.Timestamp date_expire = 4;
  }
  string msp_id = 1;
  uint64 block_number = 2;
  string host = 3;
  int32 port = 4;
  Certificate cert = 5;
  repeated string chaincodes = 6;
}

message DiscoveryEndorsersRequest {
  string channel_name = 1;
  string chaincode_name = 2;
}

message DiscoveryEndorsersResponse {
  repeated DiscoveryPeer result = 1;
}

message DiscoveryPeersRequest {
  string channel_name = 1;
}

message DiscoveryPeersResponse {
  repeated DiscoveryPeer result = 1;
}

message DiscoveryConfigRequest {
  string channel_name = 1;
}

message DiscoveryConfigResponse {
  discovery.ConfigResult result = 1;
}